# ED_Cockpit

./: .gitignore  README.md  ed_app.py  main.py  pyproject.toml  requirements-agent.txt  requirements-client.txt
Doc/: INDEX.md  architecture.md  release.md  roadmap.md  user-guide.md  user_roles.md
GUI/: bioscan_dpg.py  ed_status_monitor.py  icons_b64.py
agent/: main.py
agent/GUI/: activity_bar.py  client_manager.py  cockpit_window.py  ed_status_monitor.py  icons_b64.py
agent/GUI/pictures/: gen_exobio_btn.py
agent/core/: action_handler.py  ed_app.py  ed_process_watcher.py  journal_memory.py  journal_reader.py  status_reader.py
agent/data/: exobiology_values.json
agent/network/: auth.py  client_registry.py  ws_server.py
agent/roles/: __init__.py  base_role.py  exobiology.py  mining.py  navigation.py  session.py  value_lookup.py
agent/security/: tls_setup.py  tokens.py
client/: main.py  setup.py
client/GUI/: activity_bar.py  main_window.py  scrollable_panel.py
client/core/: config.py  ed_client.py
client/network/: ws_connection.py
client/roles/: __init__.py  base_panel.py  bioscan_table.py  exobiology_panel.py  mining_panel.py  navigation_panel.py  session_panel.py
shared/: messages.py  roles_def.py  version.py
tools/: gen_cert.py  parse_logs.py
