[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ed-cockpit"
version = "0.9.0"
description = "Elite Dangerous companion tool — agent + client over secure WebSocket"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

# Minimal shared deps; agent/client extras are declared separately below.
dependencies = [
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
agent = [
    "websockets>=12.0",
    "cryptography>=42.0",
    "psutil>=5.9",
]
agent-linux = [
    "websockets>=12.0",
    "cryptography>=42.0",
    "psutil>=5.9",
    "python-xlib>=0.33",
    "evdev>=1.6",
]
agent-windows = [
    "websockets>=12.0",
    "cryptography>=42.0",
    "psutil>=5.9",
    "pydirectinput>=1.0",
]
client = [
    "websockets>=12.0",
    "cryptography>=42.0",
]

[project.scripts]
ed-agent  = "agent.main:main"
ed-client = "client.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "client*", "shared*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.crt", "*.key"]
